# gparted

./: meson.build  meson_options.txt
po/: meson.build
src/: meson.build
